======================================
Changes for Crate Data Admin Interface
======================================

Unreleased
==========

 - added history support in admin console

2014/04/14 0.5.2
================

 - fix: scrolling issues with node list/table list

 - fix: immediately show node list on browser refresh

2014/04/08 0.5.1
================

 - fix: sorting of cluster list

2014/04/08 0.5.0
================

 - display blob tables
 
 - fix: prevent logo from overlapping sidebar navigation
 
2014/04/08 0.4.4
================

 - fix: removed horizontal scrollbar in sidebar

2014/04/07 0.4.3
================

 - fix: UI glitch: load was off site

2014/04/07 0.4.2
================

 - fix: display values at overview if no table exists

 - fix: default base_uri is current location

2014/04/07 0.4.1
================

 - fixed Angular version

2014/04/07 0.4.0
================

 - ported from Backbone to Angular

2014/03/21 0.3.1
================

 - show correct cluster status immediately after starting the admin

 - compute correct numbers of missing primary shards and unassigned shards

2014/03/17 0.3.0
================

 - use sql to query clustername and nodes load

2014/03/13 0.2.9
================

 - removed note about yellow warning state in "get started"

2014/03/13 0.2.8
================

 - use '0-all' replicas in the twitter getting started tutorial

2014/03/13 0.2.7
================

 - Changed docs link to open in the same frame.

2014/03/11 0.2.6
================

 - Fix Safari font rendering

2014/03/11 0.2.5
================

 - Changed query to fetch table information. Group by wasn't necessary and sum
   on number_of_replicas won't work in the next crate version as it is changed
   to a string.

2014/03/07 0.2.4
================

 - Fix FF bug related to mixed-content on the tutorial view.

 - Do not abort table info fetching when a node goes down and /_sql does not respond.

2014/03/06 0.2.3
================
