@@ -1,11 +1,8 @@
 <div ng-controller="StatusBarController">
   <ul class="nav navbar-nav navbar-right navbar-user">
-    <li>
-      Cluster: <span class="label label-cluster">{{cluster_name}}</span>
-    </li>
-    <li>
-      Health: <span class="label {{cluster_color_label}}">{{cluster_state}}</span>
-    </li>
+    <li>Cluster: <span class="label label-cluster">{{cluster_name}}</span></li>
+    <li>Version: <span ng-show="version">{{ version.number }}<span ng-show="version.snapshot">-SNAPSHOT-{{ version.hash }}</span></span></li>
+    <li>Health: <span class="label {{cluster_color_label}}">{{cluster_state}}</span></li>
     <li>
       Load:
       <span class="label label-load1">{{load1}}</span>/
